  for use on first-position cites that must check whether
  disambiguation is true without affecting the incremental 
  truthiness of the disambiguation conditionals.

- Improve backreference updates for styles that use the
  disambiguate conditional.

- Control for the non-breaking-space suffix used to join names
  in some French citation styles.

==========================
Changes in version 1.0.529
==========================

- Derive CSL-m variables title-main and title-sub from either
  shortTitle or title-short.

- Protect against DOM engines that set the root document above
  above cs:style node. This happens with jsdom, and possibly
  others. Implementers shouldn't need to worry about this.

==========================
Changes in version 1.0.528
==========================

- Provide automatic space before parenthetical suffixes.

==========================
Changes in version 1.0.527
==========================

- Reimplement duplicate space and punctuation suppression,
  punctuation merging, and quote swapping. Related discussion
  is here:

      https://forums.zotero.org/discussion/37091/citeproc-bug-punctuation-in-quotes/

- Introduce a hook for normalizing Unicode to avoid sort failures.
  Thread prompting the change is here (thanks to user isabel-h1 for reporting):

      https://forums.zotero.org/discussion/37201/mlz-sorting-problem-in-chinese-transliteration/

==========================
Changes in version 1.0.526
==========================

- Fix bug in page-range-format affecting certain locales. Addresses
  https://forums.zotero.org/discussion/33793?page=1#Item_13

==========================
Changes in version 1.0.525
==========================

- Add optional call to getSuppressJurisdictions() offered
  by the Abbreviation Filter.

==========================
Changes in version 1.0.524
==========================

- Expose the style name as citeproc.opt.styleName

==========================
Changes in version 1.0.523
==========================
